2008-11-30  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am:
	* vala/valacodewriter.vala:
	* compiler/valacompiler.vala:
	* vapigen/valavapigen.vala:

	Add --dump-tree command-line option to write code tree to file

2008-11-30  Jürg Billeter  <j@bitron.ch>

	* vala/valanullchecker.vala:
	* vala/valaswitchlabel.vala:
	* vala/valaswitchstatement.vala:
	* vala/valasymbolresolver.vala:
	* gobject/valaccodecontrolflowmodule.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodemodule.vala:

	Separate visiting switch sections from visiting switch statements

2008-11-30  Jürg Billeter  <j@bitron.ch>

	* vala/valamemberaccess.vala:
	* vala/valasymbolresolver.vala:
	* gobject/valaccodememberaccessmodule.vala:
	* gobject/valagsignalmodule.vala:

	Separate visiting inner expressions from visiting member access

2008-11-30  Jürg Billeter  <j@bitron.ch>

	* vala/valaaddressofexpression.vala:
	* vala/valaarraycreationexpression.vala:
	* vala/valaassignment.vala:
	* vala/valabaseaccess.vala:
	* vala/valabinaryexpression.vala:
	* vala/valablock.vala:
	* vala/valacastexpression.vala:
	* vala/valaconditionalexpression.vala:
	* vala/valadostatement.vala:
	* vala/valaelementaccess.vala:
	* vala/valaexpression.vala:
	* vala/valaforstatement.vala:
	* vala/valainitializerlist.vala:
	* vala/valalambdaexpression.vala:
	* vala/valaliteral.vala:
	* vala/valamemberaccess.vala:
	* vala/valamethodcall.vala:
	* vala/valaobjectcreationexpression.vala:
	* vala/valaparenthesizedexpression.vala:
	* vala/valapointerindirection.vala:
	* vala/valapostfixexpression.vala:
	* vala/valareferencetransferexpression.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valasizeofexpression.vala:
	* vala/valaswitchsection.vala:
	* vala/valatuple.vala:
	* vala/valatypecheck.vala:
	* vala/valatypeofexpression.vala:
	* vala/valaunaryexpression.vala:
	* vala/valawhilestatement.vala:
	* gobject/valaccodebasemodule.vala:

	Fix error handling in condition of while, do, and for statements
