@@ -1,5 +1,11 @@
 2008-11-30  Jürg Billeter  <j@bitron.ch>
 
+	* vala/valaelementaccess.vala:
+
+	Fix error handling in element access expressions
+
+2008-11-30  Jürg Billeter  <j@bitron.ch>
+
 	* vala/Makefile.am:
 	* vala/valacodewriter.vala:
 	* compiler/valacompiler.vala:
